--- a/Assignment1/assignment1.ipynb
+++ b/Assignment1/assignment1.ipynb
@@ -63,7 +63,9 @@
    "source": [
     "# importing all of the necessary objects and libraries\n",
     "from shapely.geometry import Point, LineString, Polygon\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from shapely.ops import transform\n",
+    "import pyproj"
    ]
   },
   {
@@ -315,6 +317,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -365,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -402,8 +411,8 @@
        "      <th>ISO_time_first</th>\n",
        "      <th>ISO_time_last</th>\n",
        "      <th>Nature</th>\n",
-       "      <th>orig_points</th>\n",
-       "      <th>dest_points</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>destination</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -616,7 +625,7 @@
        "8             77.6          -25.9            88.7  2015-01-24 06:00:00   \n",
        "9            160.0          -34.8           172.7  2015-01-30 18:00:00   \n",
        "\n",
-       "         ISO_time_last Nature                      orig_points  \\\n",
+       "         ISO_time_last Nature                           origin  \\\n",
        "0  2014-11-24 06:00:00     TS   POINT (66.40000000000001 -6.7)   \n",
        "1  2014-12-02 00:00:00     TS                  POINT (77.3 -8)   \n",
        "2  2015-01-04 12:00:00     NR               POINT (100.5 -7.5)   \n",
@@ -628,7 +637,7 @@
        "8  2015-02-02 06:00:00     TS  POINT (77.59999999999999 -15.1)   \n",
        "9  2015-02-04 12:00:00     NR                POINT (160 -17.5)   \n",
        "\n",
-       "                       dest_points  \n",
+       "                       destination  \n",
        "0               POINT (51.4 -11.9)  \n",
        "1               POINT (62.5 -28.9)  \n",
        "2    POINT (89.59999999999999 -30)  \n",
@@ -641,7 +650,7 @@
        "9              POINT (172.7 -34.8)  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,37 +658,19 @@
    "source": [
     "# load csv into pandas dataframe ... etc\n",
     "\n",
-    "# declare functions that creates point geom objects from appropriate columns\n",
-    "def make_origin_point(row):\n",
-    "    return Point(row['Longitude_first'], row['Latitude_first'])\n",
-    "\n",
-    "def make_destination_point(row):\n",
-    "    return Point(row['Longitude_last'], row['Latitude_last'])\n",
+    "# declare a function that creates point geom objects from appropriate columns\n",
+    "def make_point(row,longitude,latitude):\n",
+    "    return Point(row[longitude], row[latitude])\n",
     "\n",
     "# reading data from csv and making pandas dataframe object\n",
     "df = pd.read_csv('Years.2015-2017.ibtracs_wmo.storms.csv', header=0, sep=',', encoding='latin1')\n",
     "\n",
-    "# apply make_origin_point function to make origin points and add them to column\n",
-    "df['orig_points']=df.apply(make_origin_point, axis=1)\n",
-    "# apply make_destination_point function to make destination points and add them to column\n",
-    "df['dest_points']=df.apply(make_destination_point, axis=1)\n",
+    "# apply make_point function to make origin and destination points\n",
+    "df['origin']=df.apply(make_point, axis=1,args=('Longitude_first','Latitude_first')) # args used to pass extra arguments to function\n",
+    "df['destination']=df.apply(make_point, axis=1,args=('Longitude_last','Latitude_last'))\n",
     "\n",
     "df.head(10)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -708,10 +699,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'line_length'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\envs\\geopy2020\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   2894\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2895\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2896\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'line_length'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-b15743d37c5c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'test'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0manother_test\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m \u001b[0mmean_distance\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'line_length'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\envs\\geopy2020\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2900\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2901\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2902\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2903\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2904\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\ProgramData\\Miniconda3\\envs\\geopy2020\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   2895\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2896\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2897\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2898\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2899\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'line_length'"
+     ]
+    }
+   ],
+   "source": [
+    "# declare a function that makes linestring from origin and destination points\n",
+    "\n",
+    "geod = pyproj.Geod(ellps='WGS84')\n",
+    "\n",
+    "def make_line(row):\n",
+    "    return LineString([row['origin'],row['destination']])\n",
+    "   \n",
+    "\n",
+    "def calculate_distance(row):\n",
+    "    x1=row['origin'].x\n",
+    "    y1=row['origin'].y\n",
+    "    x2=row['destination'].x\n",
+    "    y2=row['destination'].y\n",
+    "    \n",
+    "    angle1,angle2,distance = geod.inv(x1, y1, x2, y2)\n",
+    "    return distance/1000\n",
+    "\n",
+    "def another_test(row):\n",
+    "    return (geod.geometry_length(row['lines']))/1000\n",
+    "        \n",
+    "df['lines']=df.apply(make_line,axis=1)\n",
+    "df[\"line_length (km)\"]=df.apply(calculate_distance,axis=1)\n",
+    "\n",
+    "df['test']=df.apply(another_test,axis=1)\n",
+    "mean_distance=df['line_length'].mean()\n",
+    "\n",
+    "\n",
+    "print(\"Mean value of all distances is\",mean_distance)\n",
+    "\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
